# chess-jni

./: .gitignore.txt  README.md
cpp/: CMakeLists.txt  ChessBoard.cpp  ChessBoard.h
java/src/: ChessBoard.java  ChessBoardGUI.java  ChessBoardTest.java
